--- a/src/styles/stylesheet.scss
+++ b/src/styles/stylesheet.scss
@@ -1,11 +1,15 @@
+///links
+// https://stackoverflow.com/questions/4011113/can-you-add-noise-to-a-css3-gradient
+
 
 /// variables
 
 
 $white: #fff;
+$title-text-gap: 20px;
 
 
-*{
+a{
   transition: 0.3s ease-in;
 }
 
@@ -22,6 +26,12 @@ html{
   color: $white;
   font-family: 'Montserrat', sans-serif;
 }
+
+
+//////////// fonts
+
+@import url(https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600);
+
 
 
 h1, h2, h3{
@@ -45,7 +55,7 @@ h1{
   //background-color: red;
   display: inline;
   margin-right: -100px;
-  padding-right: 15px;
+  padding-right: $title-text-gap;
   
 }
 
@@ -58,7 +68,7 @@ margin-right: -50px;
 text-transform: uppercase;
 
 opacity: 0.75;
-padding-right: 15px;
+padding-right: $title-text-gap;
 margin-top: 32px;
 
 }
@@ -71,23 +81,59 @@ h3{
   text-transform: uppercase;
 
   opacity: 0.75;
-  padding-left: 15px;  
+  padding-left: $title-text-gap;  
 }
 
 a{
   color: rgba($white, 0.5);
-  font-weight: 600;
+  font-weight: 500;
   font-size: 14px;
   line-height: 60px;
   text-align: right;
   text-transform: uppercase;
   text-decoration: none;
+  position: relative;
+  padding-right: 60px;
 
   &:hover{
     color: rgba($white, 1);
     transform: translateX( -10px);
   }
 }
+
+
+a::after {
+  // box-sizing: border-box;
+  // position: absolute;
+  // display: block;
+  // transform: scale(var(--ggs,1));
+  // width: 22px;
+  // height: 22px;
+  // border: 2px solid transparent;
+  // border-radius: 100px;
+}
+
+a::after {
+  content: "";
+  display: block;
+  box-sizing: border-box;
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  
+  border-bottom: 2px solid;
+  border-right: 2px solid;
+  transform: rotate(-45deg);
+  right: 30px;
+  top: 25px;
+
+
+  display: inline-block;
+}
+
+
+
+
 
 .nav{
   display: flex;
@@ -97,7 +143,7 @@ a{
   //background-color: red;
   height: 100%;
   right: 0;
-  padding-right: 32px;
+  //padding-right: 32px;
 }
 
 
@@ -111,11 +157,12 @@ a{
 
   .title-wrap{
     display: flex;
-    padding: 30 0px;
+    padding: 30px 0px;
+    //background-color: red;
     .left, .right{
       flex-grow: 1;
       //flex-shrink: 0;
-      width: 50%;
+      max-width: 50%;
 
       //margin: 30px;
 
@@ -125,7 +172,7 @@ a{
     }
     .right{
       //background-color: green;
-      padding-left: 15px;
+      //padding-left: 15px;
       text-align: left;
       display: flex;
       flex-direction: column;
@@ -153,3 +200,65 @@ a{
 }
 
 
+
+
+
+/// test
+
+.noise {
+  //mix-blend-mode: saturation;
+  opacity: 0.06;
+  width:100%;
+  height:100%;
+  position: absolute;
+  background-size:55px 10px;
+  background-repeat: repeat;
+  pointer-events: none;
+  background-image: -webkit-repeating-radial-gradient(1% 21%, closest-corner, rgba(255,0,255,.5), rgba(0,255,255,.5), rgba(0,0,0,1) 1.7%), -webkit-repeating-radial-gradient(51% 51%, closest-corner, rgba(255,255,255,1), rgba(255,255,255,1), rgba(0,255,0,1) 10%); 
+}
+.noise::before {
+  content:'';
+  width:100%;
+  height:100%;
+  position:absolute;
+  mix-blend-mode:exclusion;
+  background-size:12px 22px;
+  background-repeat: repeat;
+  background-image: -webkit-repeating-radial-gradient(61% 21%, closest-corner, rgba(255,255,255,1), rgba(0,255,0,.5), rgba(3,0,255,1) 20%),  -webkit-repeating-radial-gradient(91% 51%, closest-corner, rgba(255,255,255,1), rgba(255,255,1,.5), rgba(055,255,255,1) 20%);
+  left:0;
+  z-index:998;
+}
+.noise::after {
+  content:'';
+  width:100%;
+  height:100%;
+  position:absolute;
+  mix-blend-mode:exclusion;
+  background-size:15px 13px;
+  background-repeat: repeat;
+  background-image: -webkit-repeating-radial-gradient(21% 21%, closest-corner, rgba(255,255,255,1), rgba(0,0,255,.5), rgba(3,0,255,1) 20%);
+  left:0;
+  top:0;
+  z-index:999;
+}
+
+
+
+//1140 breakpoint here
+
+// @media only screen and (max-width: 1300px) {
+//   .title-wrap{
+//     justify-content: center;
+//     .left, .right{
+//       width: 0px;
+//       flex-shrink: 1;
+//       //overflow: hidden;
+//       background-color: red;
+//     }
+//     .right{
+//       background-color: blue;
+//       flex-shrink: 2;
+//     }
+
+//   }
+// }
