--- a/src/styles/stylesheet.scss
+++ b/src/styles/stylesheet.scss
@@ -20,6 +20,8 @@ body{
 html{
   background: radial-gradient(100% 100% at 50% 0%, #142430 0%, #050608 100%);
   height: 100vh;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
 
   color: $white;
   font-family: 'Montserrat', sans-serif;
@@ -54,20 +56,20 @@ h1{
   display: inline;
   margin-right: -100px;
   padding-right: $title-text-gap;
-  
+
 }
 
 h2{
-font-weight: 600;
-font-size: 20px;
-line-height: 24px;
-letter-spacing: 52px;
-margin-right: -50px;
-text-transform: uppercase;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 52px;
+  margin-right: -50px;
+  text-transform: uppercase;
 
-opacity: 0.75;
-padding-right: $title-text-gap;
-margin-top: 32px;
+  opacity: 0.75;
+  padding-right: $title-text-gap;
+  margin-top: 32px;
 
 }
 
@@ -186,13 +188,14 @@ a::after {
 
   .line{
     //background-color: blue;
-    height: 20px;
+    
     width: 100%;
     flex-grow: 1;
     position: relative;
     &:after{
       content: '';
       height: 100%;
+      //height: 120px;
       width: 1px;
       position: absolute;
       left: 50%;
@@ -214,7 +217,7 @@ a::after {
   opacity: 0.06;
   width:100%;
   height:100%;
-  position: absolute;
+  position: fixed;
   background-size:55px 10px;
   background-repeat: repeat;
   pointer-events: none;
@@ -248,21 +251,74 @@ a::after {
 
 
 
-//1140 breakpoint here
+//900 breakpoint here
 
-// @media only screen and (max-width: 1300px) {
-//   .title-wrap{
-//     justify-content: center;
-//     .left, .right{
-//       width: 0px;
-//       flex-shrink: 1;
-//       //overflow: hidden;
-//       background-color: red;
-//     }
-//     .right{
-//       background-color: blue;
-//       flex-shrink: 2;
-//     }
+@media only screen and (max-width: 900px) {
 
-//   }
-// }
+  h1{
+    font-size: 24px;
+    line-height: 32px;
+    letter-spacing: 50px;
+    display: inline-block;
+    margin-right: -50px;
+    padding-right: 0;
+    text-align: center;
+  }
+
+  h2{
+    font-size: 12px;
+    letter-spacing: 27px;
+    margin-right: -27px;
+    text-align: center;
+    padding-right: 0;
+    margin-top: 16px;
+  }
+
+  h3{
+    font-size: 10px;
+    letter-spacing: 2px;
+    font-weight: 600;
+    margin-right: -2px;
+    text-align: center;
+    padding-left: 0;
+    margin-top: 100px;
+  }
+
+
+  .nav{
+    position: relative;
+    //background-color: red;
+    height: auto;
+    align-items: center;
+    padding: 60px 0;
+  }
+
+  .main-wrap{
+
+    .line{
+      min-height: 100px;
+    }
+    .title-wrap{
+      //background-color: blue;
+      flex-direction: column;
+      align-items: center;
+      padding: 80px 0;
+      .left{
+        min-width: 100% !important;
+        //background-color: red;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+    
+      .right{
+        min-width: 100% !important;
+        //background-color: red;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+      }
+    }
+
+  }
+}
